--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,36 @@
 .form-control {
     border-radius: 0 !important;
 }
+
+/* datepicker */
+.react-datepicker, .react-datepicker__day {
+    border-radius: 0 !important;
+}
+
+.react-datepicker__day--selected {
+    background-color: #0d6efd !important;
+}
+
+.react-datepicker__input-container input[type=text] {
+    border-radius: 0 !important;
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+:focus-visible {
+    border-radius: 0 !important;
+    outline: none;
+    outline-offset: unset;
+}
