--- a/src/App.css
+++ b/src/App.css
@@ -7,21 +7,21 @@
 .btn,
 .card,
 .input-group-text,
-.form-control {
+.form-control,
+.dropdown-menu,
+.react-datepicker__input-container input[type=text],
+.react-datepicker, .react-datepicker__day,
+:focus-visible {
     border-radius: 0 !important;
 }
 
 /* datepicker */
-.react-datepicker, .react-datepicker__day {
-    border-radius: 0 !important;
-}
 
 .react-datepicker__day--selected {
     background-color: #0d6efd !important;
 }
 
 .react-datepicker__input-container input[type=text] {
-    border-radius: 0 !important;
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
@@ -39,7 +39,6 @@
 }
 
 :focus-visible {
-    border-radius: 0 !important;
     outline: none;
     outline-offset: unset;
 }
