--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+:root {
+    --backround: rgba(245, 245, 245, .5);
+    --nav-menu-bg: rgba(245, 245, 245, 1);
+    --nav-tabs-button-active: rgba(245, 245, 245, 0);
+}
+
+body {
+    background-color: var(--backround);
+}
+
+.app-navbar {
+    background-color: var(--nav-menu-bg);
+}
+
+.app-nav-tabs .nav-link.active {
+    background-color: var(--nav-tabs-button-active) !important;
+}
+
 .nav-fill .nav-item .nav-link,
 .nav-justified .nav-item .nav-link,
 .nav-tabs .nav-item.show .nav-link,
@@ -35,7 +53,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 :focus-visible {
